add searchbar display

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display";
   letter-spacing: 5px;
 }
+
+#searchbar {
+  width: 400px;
+  margin-left: 500px;
+}
