--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,5 +1,8 @@
-<h2>{{ item.name }}</h2>
-<img [src]="item.imagePath">
-<p>{{ item.description }}</p>
-<p>🤌 {{ item.price }}</p>
-<button (click)="onAddToBucket()">Add to bucket</button>
+<div class="itemcard">  
+    <h2>{{ item.name }}</h2>
+    <img [src]="item.imagePath">
+    <p>{{ item.description }}</p>
+    <p>Price : {{ item.price }}</p>
+    <p *ngIf="item.stock">Stock : {{item.stock}}</p>
+    <button (click)="onAddToBucket()">Add to bucket</button>
+</div>
