--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,3 +1,2 @@
 <p>shop works!</p>
-<app-item [item]="item1"></app-item>
-<app-item [item]="item1"></app-item>
+<app-item *ngFor="let crItem of items" [item]="crItem"></app-item>
