--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -2,7 +2,7 @@
     <h2>{{ item.name }}</h2>
     <img [src]="item.imagePath">
     <p>{{ item.description }}</p>
-    <p>Price : {{ item.price }}</p>
+    <p>Price : {{ item.price | currency: 'EUR'}}</p>
     <p *ngIf="item.stock">Stock : {{item.stock}}</p>
     <button (click)="onAddToBucket()">Add to bucket</button>
 </div>
