--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-shop></app-shop>
+<app-header></app-header>
+<div class="w3-content" style="max-width:1100px">
+    <app-shop></app-shop>
+</div>
+
