--- a/src/app/itemdetails/itemdetails.component.html
+++ b/src/app/itemdetails/itemdetails.component.html
@@ -1,1 +1,9 @@
 <p>itemdetails works!</p>
+<div class="itemcard">  
+    <h2>{{ item.name }}</h2>
+    <img [src]="item.imagePath">
+    <p>{{ item.description }}</p>
+    <p>Price : {{ item.price | currency: 'EUR'}}</p>
+    <p *ngIf="item.stock">Stock : {{item.stock}}</p>
+    <button (click)="onAddToBucket()">Add to bucket</button>
+</div>
